# riotbox

./: .dockerignore  .gitignore  .rgignore  AGENTS.md  Cargo.toml  Containerfile.mempalace  Justfile  LICENSE  README.md  compose.mempalace.yaml
crates/riotbox-app/: Cargo.toml
crates/riotbox-app/src/: cli.rs  jam_app.rs  lib.rs  observer.rs  runtime.rs  source_timing_cues.rs  test_support.rs  ui.rs
crates/riotbox-app/src/jam_app/: capture_artifacts.rs  capture_helpers.rs  capture_queue.rs  commit.rs  controls.rs  daw_export_operator_report.rs  daw_export_proof_gates.rs  daw_session_audible_output_proof.rs  daw_session_host_import_proof.rs  daw_session_json_writer.rs  daw_session_package_report.rs  daw_session_payload_preview.rs  daw_session_writer_plan.rs  daw_session_writer_proof.rs  daw_session_writer_proof_types.rs  ghost_candidates.rs  ghost_queue.rs  helpers.rs  lifecycle.rs  mc202_queue.rs  persistence.rs  product_export.rs  product_export_artifact_preflight.rs  product_export_receipt.rs  projection.rs  recovery.rs  restore_replay.rs  runtime_replay_warnings.rs  runtime_view.rs  scene_ops.rs  side_effects.rs  source_map_navigation.rs  source_monitor_queue.rs  source_timing_queue.rs  state.rs  stem_package_export.rs  tests.rs  (+7 more)
crates/riotbox-app/tests/: daw_export_report_smoke.rs  daw_session_audible_output_proof_apply_smoke.rs  daw_session_host_import_proof_apply_smoke.rs  daw_session_json_package_evidence_apply_smoke.rs  daw_session_writer_plan_smoke.rs  daw_session_writer_proof_smoke.rs  live_recording_report_smoke.rs  stem_package_report_smoke.rs
(+2163 files in other folders)
