[package]
name = "riotbox-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
riotbox-audio = { path = "../riotbox-audio" }
riotbox-core = { path = "../riotbox-core" }
riotbox-sidecar = { path = "../riotbox-sidecar" }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tempfile = "3"
